fix(ctrn): news, do not squish date when many cats

--- a/ctrn_assets/css/news-feed-page.css
+++ b/ctrn_assets/css/news-feed-page.css
@@ -11,3 +11,12 @@
     /* FAQ: Because CTRN grid-template-areas moves date position in header */
     text-align: right;
 }
+
+/* To not squish date when multiple categories are present */
+/* FAQ: CTRN has less room for categories than Core */
+.app-blog .categories {
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
+    flex-wrap: wrap;
+}
